--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">DanilDBonline</string>
+    <string name2="app2">DanilDBonline</string> 
+
 <string name1="app">DanilDBonline</string>
 
 </resources>
